--- a/package.json
+++ b/package.json
@@ -15,5 +15,30 @@
   "bugs": {
     "url": "https://github.com/sghall/chart-transitions-react/issues"
   },
-  "homepage": "https://github.com/sghall/chart-transitions-react#readme"
+  "homepage": "https://github.com/sghall/chart-transitions-react#readme",
+  "dependencies": {
+    "bootstrap": "3.3.6",
+    "d3-array": "0.7.1",
+    "d3-scale": "0.6.4",
+    "d3-selection": "^0.7.0",
+    "d3-shape": "0.6.0",
+    "d3-timer": "^0.4.1",
+    "react": "15.0.1",
+    "react-dom": "15.0.1",
+    "react-redux": "4.4.4",
+    "redux": "3.4.0"
+  },
+  "devDependencies": {
+    "babel-core": "6.7.6",
+    "babel-eslint": "4.1.8",
+    "babel-loader": "6.2.2",
+    "babel-plugin-transform-es2015-classes": "6.6.5",
+    "babel-plugin-transform-es3-property-literals": "6.5.0",
+    "babel-polyfill": "6.7.4",
+    "babel-preset-es2015": "6.6.0",
+    "babel-preset-react": "6.5.0",
+    "eslint": "2.1.0",
+    "eslint-plugin-react": "4.0.0",
+    "webpack": "1.12.14"
+  }
 }
