--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "d3-scale": "0.6.4",
     "d3-shape": "0.6.0",
     "d3-timer": "^0.4.1",
+    "moment": "^2.13.0",
     "react": "15.0.1",
     "react-dom": "15.0.1",
     "react-redux": "4.4.4",
