--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react": "15.0.1",
     "react-dom": "15.0.1",
     "react-redux": "4.4.4",
-    "redux": "3.4.0"
+    "redux": "3.4.0",
+    "redux-logger": "^2.6.1",
+    "redux-thunk": "^2.0.1"
   },
   "devDependencies": {
     "babel-core": "6.7.6",
