--- a/package.json
+++ b/package.json
@@ -19,17 +19,16 @@
   "dependencies": {
     "bootstrap": "3.3.6",
     "d3-array": "0.7.1",
+    "d3-format": "0.5.1",
     "d3-scale": "0.6.4",
     "d3-shape": "0.6.0",
-    "d3-timer": "^0.4.1",
-    "mobx": "^2.1.4",
-    "moment": "^2.13.0",
+    "d3-timer": "0.4.1",
     "react": "15.0.1",
     "react-dom": "15.0.1",
     "react-redux": "4.4.4",
     "redux": "3.4.0",
-    "redux-logger": "^2.6.1",
-    "redux-thunk": "^2.0.1"
+    "redux-logger": "2.6.1",
+    "redux-thunk": "2.0.1"
   },
   "devDependencies": {
     "babel-core": "6.7.6",
