add material-ui alpha for React 15.0

--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
     "d3-array": "0.7.1",
     "d3-format": "0.5.1",
     "d3-scale": "0.6.4",
-    "d3-shape": "0.6.0",
     "d3-timer": "0.4.1",
-    "react": "15.0.1",
-    "react-dom": "15.0.1",
+    "material-ui": "0.15.0-beta.2",
+    "react": "15.0.2",
+    "react-dom": "15.0.2",
     "react-redux": "4.4.4",
+    "react-tap-event-plugin": "1.0.0",
     "redux": "3.4.0",
     "redux-logger": "2.6.1",
     "redux-thunk": "2.0.1"
