--- a/examples/barChartExample/package.json
+++ b/examples/barChartExample/package.json
@@ -5,15 +5,19 @@
   },
   "license": "MIT",
   "dependencies": {
-    "babel-polyfill": "^6.3.14",
-    "bootstrap": "^3.3.6",
-    "isomorphic-fetch": "^2.1.1",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
-    "react-redux": "^4.2.1",
-    "redux": "^3.2.1",
-    "redux-logger": "^2.4.0",
-    "redux-thunk": "^1.0.3"
+    "babel-polyfill": "6.7.4",
+    "d3-array": "0.7.1",
+    "d3-format": "0.5.1",
+    "d3-scale": "0.6.4",
+    "d3-timer": "0.4.1",
+    "material-ui": "0.15.0-beta.2",
+    "react": "15.0.2",
+    "react-dom": "15.0.2",
+    "react-redux": "4.4.4",
+    "react-tap-event-plugin": "1.0.0",
+    "redux": "3.4.0",
+    "redux-logger": "2.6.1",
+    "redux-thunk": "2.0.1"
   },
   "devDependencies": {
     "babel-core": "6.7.6",
