--- a/examples/barChartExample/.babelrc
+++ b/examples/barChartExample/.babelrc
@@ -1,8 +1,6 @@
 {
-  "presets": ["es2015", "react"],
-  "env": {
-    "development": {
-      "presets": ["react-hmre"]
-    }
-  }
+  "plugins": [
+  	"transform-es3-property-literals",
+  	["transform-es2015-classes", {"loose": true}]
+  ]
 }
