--- a/examples/barChartExample/package.json
+++ b/examples/barChartExample/package.json
@@ -1,11 +1,23 @@
 {
-  "name": "chart-transitions-react-bar-chart-example",
+  "name": "chart-transitions-react",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sghall/chart-transitions-react.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/sghall/chart-transitions-react/issues"
+  },
+  "homepage": "https://github.com/sghall/chart-transitions-react#readme",
   "dependencies": {
-    "babel-polyfill": "6.7.4",
+    "bootstrap": "3.3.6",
     "d3-array": "0.7.1",
     "d3-format": "0.5.1",
     "d3-scale": "0.6.4",
@@ -23,15 +35,13 @@
     "babel-core": "6.7.6",
     "babel-eslint": "4.1.8",
     "babel-loader": "6.2.2",
+    "babel-plugin-transform-es2015-classes": "6.6.5",
+    "babel-plugin-transform-es3-property-literals": "6.5.0",
+    "babel-polyfill": "6.7.4",
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
-    "babel-preset-react-hmre": "1.1.1",
     "eslint": "2.1.0",
     "eslint-plugin-react": "4.0.0",
-    "express": "4.13.3",
-    "node-libs-browser": "^0.5.2",
-    "webpack": "1.12.14",
-    "webpack-dev-middleware": "1.6.1",
-    "webpack-hot-middleware": "2.10.0"
+    "webpack": "1.12.14"
   }
 }
