--- a/examples/barChartExample/package.json
+++ b/examples/barChartExample/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chart-transitions-react",
+  "name": "bar-chart-example",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,14 +11,12 @@
     "url": "git+https://github.com/sghall/chart-transitions-react.git"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/sghall/chart-transitions-react/issues"
   },
   "homepage": "https://github.com/sghall/chart-transitions-react#readme",
   "dependencies": {
-    "bootstrap": "3.3.6",
-    "d3-array": "0.7.1",
     "d3-format": "0.5.1",
     "d3-scale": "0.6.4",
     "d3-timer": "0.4.1",
@@ -28,15 +26,11 @@
     "react-redux": "4.4.4",
     "react-tap-event-plugin": "1.0.0",
     "redux": "3.4.0",
-    "redux-logger": "2.6.1",
-    "redux-thunk": "2.0.1"
   },
   "devDependencies": {
     "babel-core": "6.7.6",
     "babel-eslint": "4.1.8",
     "babel-loader": "6.2.2",
-    "babel-plugin-transform-es2015-classes": "6.6.5",
-    "babel-plugin-transform-es3-property-literals": "6.5.0",
     "babel-polyfill": "6.7.4",
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
