--- a/examples/barChartExample/package.json
+++ b/examples/barChartExample/package.json
@@ -25,7 +25,7 @@
     "react-dom": "15.0.2",
     "react-redux": "4.4.4",
     "react-tap-event-plugin": "1.0.0",
-    "redux": "3.4.0",
+    "redux": "3.4.0"
   },
   "devDependencies": {
     "babel-core": "6.7.6",
