updates to alphabet example

--- a/examples/alphabetExample/package.json
+++ b/examples/alphabetExample/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bar-chart-example",
+  "name": "alphabet-example",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
@@ -17,9 +17,8 @@
   },
   "homepage": "https://github.com/sghall/chart-transitions-react#readme",
   "dependencies": {
-    "d3-format": "0.5.1",
+    "d3-array": "^0.7.1",
     "d3-interpolate": "0.7.0",
-    "d3-scale": "0.6.4",
     "d3-timer": "0.4.1",
     "material-ui": "0.15.0-beta.2",
     "react": "15.0.2",
