--- a/examples/streamGraphExample/package.json
+++ b/examples/streamGraphExample/package.json
@@ -20,8 +20,10 @@
     "d3-format": "0.5.1",
     "d3-interpolate": "0.7.0",
     "d3-scale": "0.6.4",
+    "d3-shape": "^0.6.0",
     "d3-timer": "0.4.1",
     "material-ui": "0.15.0-beta.2",
+    "moment": "^2.13.0",
     "react": "15.0.2",
     "react-dom": "15.0.2",
     "react-redux": "4.4.4",
