change name to match example

--- a/examples/streamGraphExample/package.json
+++ b/examples/streamGraphExample/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bar-chart-example",
+  "name": "stream-graph-example",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
