--- a/examples/alphabetExample/package.json
+++ b/examples/alphabetExample/package.json
@@ -20,7 +20,7 @@
     "d3-array": "0.7.1",
     "d3-interpolate": "0.7.0",
     "d3-timer": "0.4.1",
-    "material-ui": "0.15.0-beta.2",
+    "material-ui": "0.15.0",
     "react": "15.0.2",
     "react-dom": "15.0.2",
     "react-redux": "4.4.4",
