--- a/examples/streamGraphExample/package.json
+++ b/examples/streamGraphExample/package.json
@@ -23,7 +23,7 @@
     "d3-shape": "0.6.0",
     "d3-time-format": "0.3.2",
     "d3-timer": "0.4.1",
-    "material-ui": "0.15.0-beta.2",
+    "material-ui": "0.15.0",
     "moment": "2.13.0",
     "react": "15.0.2",
     "react-dom": "15.0.2",
