--- a/examples/alphabetExample/package.json
+++ b/examples/alphabetExample/package.json
@@ -1,5 +1,6 @@
 {
   "name": "alphabet-example",
+  "description": "Example of using React and D3 4.0",
   "version": "0.0.1",
   "repository": {
     "type": "git",
@@ -14,23 +15,23 @@
     "d3-array": "0.7.1",
     "d3-interpolate": "0.7.0",
     "d3-timer": "0.4.3",
-    "material-ui": "0.15.0",
-    "react": "15.0.2",
-    "react-dom": "15.0.2",
-    "react-redux": "4.4.5",
-    "react-tap-event-plugin": "1.0.0",
-    "redux": "3.5.2",
-    "redux-logger": "2.6.1"
+    "material-ui": "0.16.6",
+    "react": "15.4.2",
+    "react-dom": "15.4.2",
+    "react-redux": "5.0.2",
+    "react-tap-event-plugin": "2.0.1",
+    "redux": "3.6.0",
+    "redux-logger": "2.7.4"
   },
   "devDependencies": {
-    "babel-core": "6.7.6",
-    "babel-eslint": "4.1.8",
-    "babel-loader": "6.2.2",
-    "babel-polyfill": "6.7.4",
-    "babel-preset-es2015": "6.6.0",
-    "babel-preset-react": "6.5.0",
-    "eslint": "2.1.0",
-    "eslint-plugin-react": "4.0.0",
-    "webpack": "1.12.14"
+    "babel-core": "6.21.0",
+    "babel-eslint": "6.0.4",
+    "babel-loader": "6.2.10",
+    "babel-polyfill": "6.20.0",
+    "babel-preset-es2015": "6.18.0",
+    "babel-preset-react": "6.16.0",
+    "eslint": "3.13.1",
+    "eslint-plugin-react": "6.9.0",
+    "webpack": "1.13.3"
   }
 }
