--- a/examples/stackedChartExample/package.json
+++ b/examples/stackedChartExample/package.json
@@ -1,5 +1,6 @@
 {
   "name": "stacked-chart-example",
+  "description": "Example of using React and D3 4.0",
   "version": "0.0.1",
   "repository": {
     "type": "git",
@@ -11,30 +12,31 @@
   },
   "homepage": "https://github.com/sghall/react-d3-transitions#readme",
   "dependencies": {
-    "d3-format": "0.5.1",
-    "d3-interpolate": "0.7.0",
-    "d3-scale": "0.7.0",
-    "d3-shape": "0.6.0",
-    "d3-time-format": "0.3.2",
-    "d3-timer": "0.4.3",
-    "material-ui": "0.15.0",
-    "moment": "2.13.0",
-    "react": "15.0.2",
-    "react-dom": "15.0.2",
-    "react-redux": "4.4.5",
-    "react-tap-event-plugin": "1.0.0",
-    "redux": "3.5.2",
-    "redux-logger": "2.6.1"
+    "d3-format": "1.0.2",
+    "d3-interpolate": "1.1.3",
+    "d3-scale": "1.0.4",
+    "d3-shape": "1.0.4",
+    "d3-time-format": "2.0.3",
+    "d3-timer": "1.0.3",
+    "material-ui": "0.16.6",
+    "moment": "2.17.1",
+    "react": "15.4.2",
+    "react-dom": "15.4.2",
+    "react-redux": "5.0.2",
+    "react-tap-event-plugin": "2.0.1",
+    "redux": "3.6.0",
+    "redux-logger": "2.7.4"
   },
   "devDependencies": {
-    "babel-core": "6.8.0",
+    "babel-core": "6.21.0",
     "babel-eslint": "6.0.4",
-    "babel-loader": "6.2.4",
-    "babel-polyfill": "6.8.0",
-    "babel-preset-es2015": "6.6.0",
-    "babel-preset-react": "6.5.0",
-    "eslint": "2.9.0",
-    "eslint-plugin-react": "5.1.1",
-    "webpack": "1.12.14"
+    "babel-loader": "6.2.10",
+    "babel-polyfill": "6.20.0",
+    "babel-preset-es2015": "6.18.0",
+    "babel-preset-react": "6.16.0",
+    "eslint": "3.13.1",
+    "eslint-plugin-react": "6.9.0",
+    "webpack": "1.13.3"
   }
 }
+
