--- a/package.json
+++ b/package.json
@@ -38,12 +38,15 @@
     "d3-shape": "^1.0.6",
     "material-ui": "^0.17.1",
     "moment": "^2.17.1",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.0",
     "react-title-component": "^1.0.1",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
     "reselect": "^2.5.4",
+    "resonance": "^0.1.0",
     "simple-assign": "^0.1.0"
   }
 }
