--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
     "react-router": "^3.0.0",
+    "react-tap-event-plugin": "^2.0.1",
     "react-title-component": "^1.0.1",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
