--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "NODE_ENV=docs-production webpack --config webpack-production.config.js --progress --colors --profile"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.24.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.25.0",
     "doctrine": "^2.0.0",
