--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
   },
   "scripts": {
     "start": "npm run dev",
-    "dev": "webpack-dev-server --config webpack-dev-server.config.js --progress --colors --inline",
-    "prd": "NODE_ENV=docs-production webpack-dev-server --config webpack-production.config.js --progress --colors",
-    "build": "NODE_ENV=docs-production webpack --config webpack-production.config.js --progress --colors --profile"
+    "dev": "webpack-dev-server --config webpack-dev-server.config.js --progress --colors --inline"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.24.0",
